objects/LLC_BI__Tenant__c.object
<CustomObject>
    <description>This object represents an occupant of a commercial or residential property, responsible for meeting the terms of their tenancy agreement.</description>
    <fields>
        <fullName>LLC_BI__Company_Identification_Number__c</fullName>
        <description>Users populate this required text field to indicate the identification number for the tenant.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Country_ISO_Code__c</fullName>
        <description>Users populate this required picklist field to capture the ISO 3166 Alpha-3 code to the country where the tenant is based.</description>
        <label>Country ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABW</fullName>
                </value>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>AGO</fullName>
                </value>
                <value>
                    <fullName>AIA</fullName>
                </value>
                <value>
                    <fullName>ALA</fullName>
                </value>
                <value>
                    <fullName>ALB</fullName>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>ARE</fullName>
                </value>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>ATA</fullName>
                </value>
                <value>
                    <fullName>ATF</fullName>
                </value>
                <value>
                    <fullName>ATG</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>AUT</fullName>
                </value>
                <value>
                    <fullName>AZE</fullName>
                </value>
                <value>
                    <fullName>BDI</fullName>
                </value>
                <value>
                    <fullName>BEL</fullName>
                </value>
                <value>
                    <fullName>BEN</fullName>
                </value>
                <value>
                    <fullName>BES</fullName>
                </value>
                <value>
                    <fullName>BFA</fullName>
                </value>
                <value>
                    <fullName>BGD</fullName>
                </value>
                <value>
                    <fullName>BGR</fullName>
                </value>
                <value>
                    <fullName>BHR</fullName>
                </value>
                <value>
                    <fullName>BHS</fullName>
                </value>
                <value>
                    <fullName>BIH</fullName>
                </value>
                <value>
                    <fullName>BLM</fullName>
                </value>
                <value>
                    <fullName>BLR</fullName>
                </value>
                <value>
                    <fullName>BLZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Name__c</fullName>
        <description>Users populate this optional text field to capture the name of the tenant.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tenant</label>
    <nameField>
        <displayFormat>Tenant-{00000000}</displayFormat>
        <label>Tenant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>